--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
         }
 
         .sidebar img {
-            width: 100%;
+            width: 75%;
             border-radius: 50%;
-            margin-bottom: 20px;
+            position: relative;
+            left: 50%;
+            transform: translateX(-50%);
         }
 
         .sidebar h2 {
@@ -163,7 +165,7 @@
 
             <div class="section">
                 <h2>EXPÉRIENCE PROFESSIONNELLE</h2>
-                <p class="job-title"><a href="https://robine.app">Robine.app</a> — Technicien en maintenance de site web (WordPress)</p>
+                <p class="job-title"><a href="https://robine.app" target="_blank">Robine.app</a> — Technicien en maintenance de site web (WordPress)</p>
                 <p>mai 2023 - présent</p>
                 <ul>
                     <li>Modification de site web via WordPress, en utilisant ACF et PHP.</li>
@@ -171,17 +173,17 @@
                     <li>Amélioration de l’expérience utilisateur en modifiant le design et les fonctionnalités du site.</li>
                 </ul>
 
-                <p class="job-title"><a href="#">CRS Vamic</a> — Maintenance de site web et assembleur de courroies</p>
+                <p class="job-title"><a href="https://crsvamic.ca/" target="_blank">CRS Vamic</a> — Maintenance de site web et assembleur de courroies</p>
                 <p>Été et hiver, depuis 4 ans</p>
                 <ul>
                     <li>Assemblage de courroies pour l’industrie de la fabrication.</li>
-                    <li>Modifications sur le site web via une interface d'administration (pas de code).</li>
+                    <li>Modifications sur le site web via une interface d'administration (pas de programmation).</li>
                 </ul>
             </div>
 
             <div class="section">
                 <h2>PROJETS D’ENVERGURE</h2>
-                <p class="job-title"><a href="https://rockstoclimb.com">rockstoclimb.com</a> — Développeur web</p>
+                <p class="job-title"><a href="https://rockstoclimb.com" target="_blank">RocksToClimb.com</a> — Développeur web</p>
                 <ul>
                     <li>Développement du backend en PHP.</li>
                     <li>Participation au développement du frontend avec React.</li>
