--- a/index.html
+++ b/index.html
@@ -2,186 +2,55 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>CV Alek Del Balso</title>
+    <title>Alek Del Balso</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Roboto', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f2f5;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-
-        .container {
-            display: flex;
-            width: 1000px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            background-color: white;
-            overflow: hidden;
-        }
-
-        .sidebar {
-            width: 280px;
-            background-color: #1e3a56;
-            color: white;
-            padding: 20px;
-            flex-shrink: 0;
-        }
-
-        .sidebar img {
-            width: 75%;
-            border-radius: 50%;
-            position: relative;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
-        .sidebar h2 {
-            font-size: 18px;
-            margin-top: 30px;
-            border-bottom: 1px solid #fff;
-            padding-bottom: 4px;
-        }
-
-        .sidebar ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        .sidebar ul li {
-            margin: 10px 0;
-            display: flex;
-            align-items: center;
-        }
-
-        .sidebar .material-icons {
-            margin-right: 10px;
-            font-size: 20px;
-        }
-
-        .main {
-            flex-grow: 1;
-            padding: 40px;
-            color: #333;
-        }
-
-        h1 {
-            font-size: 32px;
-            margin-bottom: 10px;
-        }
-
-        h2 {
-            border-bottom: 1px solid #ccc;
-            padding-bottom: 5px;
-            margin-top: 30px;
-        }
-
-        .section {
-            margin-bottom: 25px;
-        }
-
-        .section ul {
-            padding-left: 20px;
-        }
-
-        .section ul li {
-            margin-bottom: 5px;
-        }
-
-        .job-title {
-            font-weight: bold;
-        }
-
-        a {
-            color: #1e3a56;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        p {
-            margin-top: 5px;
-            margin-bottom: 10px;
-        }
-    </style>
+    <link rel="icon" type="image/x-icon" href="circle.png">
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="sidebar">
-            <img src="1000012651.jpg" alt="Alek Del Balso">
-            <h2>CONTACT</h2>
-            <ul>
-                <li><span class="material-icons">location_on</span>Sainte-Catherine, Québec</li>
-                <li><span class="material-icons">email</span>alekdelbalso@gmail.com </li>
-                <li><span class="material-icons">phone</span>438-523-2058</li>
-            </ul>
+    <div id="Portfolio">
+        <div id="buttons">
+            <button onclick="OnClickButton(this)" id="Home">Home</button>
+            <button onclick="OnClickButton(this)" id="Projects">Projects</button>
+            <button onclick="OnClickButton(this)" id="Info">Info</button>
+        </div>
+        <h1>ALEK DEL BALSO</h1>
 
-            <h2>ÉDUCATION</h2>
-            <p>Cégep du Vieux Montréal<br>Technique en informatique<br>septembre 2021 - juin 2025</p>
+        <div id="Home-page" class="page">
 
-            <h2>LANGUES</h2>
-            <ul>
-                <li>Français</li>
-                <li>Anglais</li>
-            </ul>
+            <div class="page-section p1s1">
+                <img src="1000012651.jpg" alt="Alek Del Balso">
+            </div>
 
-            <h2>COMPÉTENCES</h2>
-            <ul>
-                <li>Travail en équipe</li>
-                <li>Esprit logique</li>
-                <li>Communication</li>
-                <li>Curiosité intellectuelle</li>
-                <li>Autodidacte</li>
-            </ul>
+            <div class="page-section p1s2">
+                <h2>COMPÉTENCES TECHNIQUES</h2>
+                <ul>
+                    <li><strong>Langages de programmation :</strong> HTML, CSS, JavaScript, PHP, Java, Python, C++, C#</li>
+                    <li><strong>Bases de données :</strong> MySQL, NoSQL (MongoDB, Neo4j, Berkeley DB)</li>
+                    <li><strong>Frameworks et outils :</strong> React, WordPress, ACF</li>
+                    <li><strong>Autres :</strong> Unity (développement de jeux vidéo en C#)</li>
+                </ul>
+            </div>
 
-            <h2>LOISIRS</h2>
-            <ul>
-                <li>Escalade</li>
-                <li>Jeux vidéo</li>
-                <li>Course à pied</li>
-                <li>Activités de plein air</li>
-                <li>Guitare</li>
-            </ul>
+            <div class="page-section p1s3">
+                <h2>Qui suis-je</h2>
+                    <p>Passionné par le <strong>développement web</strong>, je cherche à mettre à 
+                        profit mes compétences en développement backend et frontend pour 
+                        contribuer à des projets innovants dans l'industrie des sites web.</p>
+            </div>
+
+            <div class="page-section p1s4">
+                <h2>ÉDUCATION</h2>
+                <p>Cégep du Vieux Montréal<br><strong>Technique en informatique</strong><br>septembre 2021 - juin 2025</p>
+            </div>
         </div>
 
-        <div class="main">
-            <h1>ALEK DEL BALSO</h1>
 
-            <div class="section">
-                <h2>PROFIL</h2>
-                <p>Passionné par le développement web, je cherche à mettre à profit mes compétences en développement backend et frontend pour contribuer à des projets innovants dans l'industrie des sites web.</p>
-            </div>
 
-            <div class="section">
-                <h2>EXPÉRIENCE PROFESSIONNELLE</h2>
-                <p class="job-title"><a href="https://robine.app" target="_blank">Robine.app</a> — Technicien en maintenance de site web (WordPress)</p>
-                <p>mai 2023 - présent</p>
-                <ul>
-                    <li>Modification de site web via WordPress, en utilisant ACF et PHP.</li>
-                    <li>Personnalisation de pages en utilisant HTML, CSS, JavaScript et PHP.</li>
-                    <li>Amélioration de l’expérience utilisateur en modifiant le design et les fonctionnalités du site.</li>
-                </ul>
-
-                <p class="job-title"><a href="https://crsvamic.ca/" target="_blank">CRS Vamic</a> — Maintenance de site web et assembleur de courroies</p>
-                <p>Été et hiver, depuis 4 ans</p>
-                <ul>
-                    <li>Assemblage de courroies pour l’industrie de la fabrication.</li>
-                    <li>Modifications sur le site web via une interface d'administration (pas de programmation).</li>
-                </ul>
-            </div>
-
-            <div class="section">
+        <div id="Projects-page" class="page">
+            <div class="page-section p2s1">
                 <h2>PROJETS D’ENVERGURE</h2>
                 <p class="job-title"><a href="https://rockstoclimb.com" target="_blank">RocksToClimb.com</a> — Développeur web</p>
                 <ul>
@@ -191,14 +60,79 @@
                     <li>Déploiement du site web.</li>
                 </ul>
             </div>
+            <a href="https://rockstoclimb.com/" target="_blank">
+            <div class="page-section p2s2">
+                <img src="rockstoclimb.png" alt="RocksToClimb">
+            </div>
+            </a>
 
-            <div class="section">
-                <h2>COMPÉTENCES TECHNIQUES</h2>
+            <h2 class="p2h">EXPÉRIENCE PROFESSIONNELLE</h2>
+            <div class="page-section p2s3">
+                <p class="job-title"><a href="https://robine.app" target="_blank">Robine.app</a> — Technicien en maintenance de site web (WordPress)</p>
+                <p>mai 2023 - présent</p>
                 <ul>
-                    <li><strong>Langages de programmation :</strong> HTML, CSS, JavaScript, PHP, Java, Python, C++, C#</li>
-                    <li><strong>Bases de données :</strong> MySQL, NoSQL (MongoDB, Neo4j, Berkeley DB)</li>
-                    <li><strong>Frameworks et outils :</strong> React, WordPress, ACF</li>
-                    <li><strong>Autres :</strong> Unity (développement de jeux vidéo en C#)</li>
+                    <li>Modification de site web via WordPress, en utilisant ACF et PHP.</li>
+                    <li>Personnalisation de pages en utilisant HTML, CSS, JavaScript et PHP.</li>
+                    <li>Amélioration de l’expérience utilisateur en modifiant le design et les fonctionnalités du site.</li>
+                </ul>
+            </div>
+
+            <div class="page-section p2s4">
+                <p class="job-title"><a href="https://crsvamic.ca/" target="_blank">CRS Vamic</a> — Maintenance de site web et assembleur de courroies</p>
+                <p>Été et hiver, depuis 4 ans</p>
+                <ul>
+                    <li>Assemblage de courroies pour l’industrie de la fabrication.</li>
+                    <li>Modifications sur le site web via une interface d'administration (pas de programmation).</li>
+                </ul>
+            </div>
+
+
+        </div>
+
+
+
+
+        <div id="Info-page"  class="page">
+
+            <div class="page-section p3s1">
+                <h2>CONTACT</h2>
+                <ul>
+                    <li><span class="material-icons">location_on</span>Sainte-Catherine, Qc, Canada</li>
+                    <li><span class="material-icons">email</span><a href="mailto:alekdelbalso@gmail.com">alekdelbalso@gmail.com</a> </li>
+                    <li><span class="material-icons">phone</span>438-523-2058</li>
+                </ul>
+            </div>
+
+
+            <div class="page-section p3s2">
+                <h2>LANGUES</h2>
+                <ul>
+                    <li>Français</li>
+                    <li>Anglais</li>
+                </ul>
+            </div>
+
+
+            <div class="page-section p3s3">
+                <h2>COMPÉTENCES</h2>
+                <ul>
+                    <li>Travail en équipe</li>
+                    <li>Esprit logique</li>
+                    <li>Communication</li>
+                    <li>Curiosité intellectuelle</li>
+                    <li>Autodidacte</li>
+                </ul>
+            </div>
+
+            
+            <div class="page-section p3s4">
+                <h2>LOISIRS</h2>
+                <ul>
+                    <li>Course à pied</li>
+                    <li>Activités de plein air</li>
+                    <li>Guitare</li>
+                    <li>Jeux vidéo</li>
+                    <li>Escalade</li>
                 </ul>
             </div>
         </div>
