--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Alek Del Balso</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="circle.png">
+    <link rel="icon" type="image/x-icon" href="img/circle.png">
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
 </head>
@@ -21,7 +21,7 @@
         <div id="Home-page" class="page">
 
             <div class="page-section p1s1">
-                <img src="1000012651.jpg" alt="Alek Del Balso">
+                <img src="img/portrait.jpg" alt="Alek Del Balso">
             </div>
 
             <div class="page-section p1s2">
@@ -62,7 +62,7 @@
             </div>
             <a href="https://rockstoclimb.com/" target="_blank">
             <div class="page-section p2s2">
-                <img src="rockstoclimb.png" alt="RocksToClimb">
+                <img src="img/rockstoclimb.png" alt="RocksToClimb">
             </div>
             </a>
 
