--- a/signature_alek.html
+++ b/signature_alek.html
@@ -15,4 +15,4 @@
         <a href="tel:+14385232058" style="color: #1a73e8; text-decoration: underline;">438 523 2058</a><br>
         <a href="mailto:alekdelbalso@gmail.com" style="color: #1a73e8; text-decoration: underline;">alekdelbalso@gmail.com</a><br><br>
     </tr>
-</table>>
+</table>
