--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <div class="page-section _langues">
                 <h2>LANGUES</h2>
                 <ul>
-                    <li>Français</li>
-                    <li>Anglais</li>
+                    <li>- Français</li>
+                    <li>- Anglais</li>
                 </ul>
             </div>
 
@@ -103,11 +103,11 @@
             <div class="page-section _competence">
                 <h2>COMPÉTENCES</h2>
                 <ul>
-                    <li>Travail en équipe</li>
-                    <li>Esprit logique</li>
-                    <li>Communication</li>
-                    <li>Curiosité intellectuelle</li>
-                    <li>Autodidacte</li>
+                    <li>- Travail en équipe</li>
+                    <li>- Esprit logique</li>
+                    <li>- Communication</li>
+                    <li>- Curiosité intellectuelle</li>
+                    <li>- Autodidacte</li>
                 </ul>
             </div>
 
@@ -115,11 +115,11 @@
             <div class="page-section _loisirs">
                 <h2>LOISIRS</h2>
                 <ul>
-                    <li>Course à pied</li>
-                    <li>Activités de plein air</li>
-                    <li>Guitare</li>
-                    <li>Jeux vidéo</li>
-                    <li>Escalade</li>
+                    <li>- Course à pied</li>
+                    <li>- Activités de plein air</li>
+                    <li>- Guitare</li>
+                    <li>- Jeux vidéo</li>
+                    <li>- Escalade</li>
                 </ul>
             </div>
 
@@ -137,10 +137,10 @@
                 <h2>PROJETS D’ENVERGURE</h2>
                 <p class="job-title"><a href="https://rockstoclimb.com" target="_blank">RocksToClimb.com</a> — Développeur web</p>
                 <ul>
-                    <li>Développement du backend en PHP.</li>
-                    <li>Participation au développement du frontend avec React.</li>
-                    <li>Gestion des bases de données et optimisation des performances.</li>
-                    <li>Déploiement du site web.</li>
+                    <li>- Développement du backend en PHP.</li>
+                    <li>- Participation au développement du frontend avec React.</li>
+                    <li>- Gestion des bases de données et optimisation des performances.</li>
+                    <li>- Déploiement du site web.</li>
                 </ul>
             </div>
 
@@ -149,9 +149,9 @@
                 <p class="job-title"><a href="https://robine.app" target="_blank">Robine.app</a> — Technicien en maintenance de site web (WordPress)</p>
                 <p>mai 2023 - présent</p>
                 <ul>
-                    <li>Modification de site web via WordPress, en utilisant ACF et PHP.</li>
-                    <li>Personnalisation de pages en utilisant HTML, CSS, JavaScript et PHP.</li>
-                    <li>Amélioration de l’expérience utilisateur en modifiant le design et les fonctionnalités du site.</li>
+                    <li>- Modification via WordPress, en utilisant ACF et PHP.</li>
+                    <li>- Utilisation de HTML, CSS, JavaScript et PHP.</li>
+                    <li>- Amélioration de l’expérience utilisateur en modifiant le design et les fonctionnalités du site.</li>
                 </ul>
             </div>
 
@@ -159,8 +159,8 @@
                 <p class="job-title"><a href="https://crsvamic.ca/" target="_blank">CRS Vamic</a> — Maintenance de site web et assembleur de courroies</p>
                 <p>Été et hiver, depuis 4 ans</p>
                 <ul>
-                    <li>Assemblage de courroies pour l’industrie de la fabrication.</li>
-                    <li>Modifications sur le site web via une interface d'administration (pas de programmation).</li>
+                    <li>- Assemblage de courroies pour l’industrie de la fabrication.</li>
+                    <li>- Modifications sur le site web via une interface d'administration (pas de programmation).</li>
                 </ul>
             </div>
 
