--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 
             <div class="page-section _education">
                 <h2>ÉDUCATION</h2>
-                <p>Cégep du Vieux Montréal<br><strong>Technique en informatique</strong><br>septembre 2022 - juin 2025</p>
+                <div>
+                <p class="cvm">Cégep du Vieux Montréal<br><strong>Technique en informatique</strong><br>2025</p>
+                <p class="ets">École de Technologie supérieure (ÉTS) <br><strong>Baccalauréat en génie logiciel</strong><br>septembre 2025 - présent</p>
+                </div>
             </div>
 
 
@@ -146,7 +149,7 @@
 
             <h2 class="p2h">EXPÉRIENCE PROFESSIONNELLE</h2>
             <div class="page-section _robine">
-                <p class="job-title"><a href="https://robine.app" target="_blank">Robine.app</a> — Technicien en maintenance de site web (WordPress)</p>
+                <p class="job-title"><a href="https://robine.app" target="_blank">Robine.app</a> <br> Technicien en maintenance de site web (WordPress)</p>
                 <p>mai 2023 - présent</p>
                 <ul>
                     <li>- Modification via WordPress, en utilisant ACF et PHP.</li>
@@ -156,11 +159,11 @@
             </div>
 
             <div class="page-section _crsvamic">
-                <p class="job-title"><a href="https://crsvamic.ca/" target="_blank">CRS Vamic</a> — Maintenance de site web et assembleur de courroies</p>
+                <p class="job-title"><a href="https://crsvamic.ca/" target="_blank">CRS Vamic</a> <br>Maintenance de site web et assembleur de courroies</p>
                 <p>Été et hiver, depuis 4 ans</p>
                 <ul>
                     <li>- Assemblage de courroies pour l’industrie de la fabrication.</li>
-                    <li>- Modifications sur le site web via une interface d'administration (pas de programmation).</li>
+                    <li>- Modifications du design et des fonctionnalités du site web (PHP, JavaScript, HTML, CSS)</li>
                 </ul>
             </div>
 
